--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,6 +19,27 @@ services:
       - /app/node_modules
       
       - ./src:/app/src
+
+  dev:
+  
+    build: 
+    
+      context: ./
+
+      dockerfile: ./dockerfiles/dev.dockerfile
+
+    
+      
+    volumes:
+      
+      - ./lib:/app/lib
+      - ./test:/app/test
+  
+    tty: true
+    
+    stdin_open: true
+    
+  
   
   preview:
     
