--- a/package.json
+++ b/package.json
@@ -14,20 +14,20 @@
     "dist",
     "lib"
   ],
-  "version": "1.0.1",
+  "version": "1.0.11",
   "scripts": {
     "start": "astro dev",
-    "dev": "tsup lib/index.ts --watch",
+    "dev": "vitest ",
     "prod": "astro build",
     "build": "tsup lib/index.ts --format cjs,esm --dts --clean",
     "release": "npm login && npm publish"
   },
   "devDependencies": {
+    "@vitest/ui": "^0.25.1",
     "astro": "^1.6.3",
-    "remark-astro-layout-url-injector": "^1.0.0"
-  },
-  "dependencies": {
-    "tsup": "^6.4.0"
+    "remark-astro-layout-url-injector": "^1.0.0",
+    "tsup": "^6.4.0",
+    "vitest": "^0.25.1"
   },
   "repository": {
     "url": "https://github.com/louiss0/remark-astro-layout-url-injector"
