--- a/package.json
+++ b/package.json
@@ -11,13 +11,12 @@
     }
   },
   "files": [
-    "dist",
-    "lib"
+    "dist"
   ],
-  "version": "1.1.0",
+  "version": "1.1.3",
   "scripts": {
     "start": "astro dev",
-    "dev": "vitest --ui --open",
+    "dev": "vitest",
     "prod": "astro build",
     "build": "tsup lib/index.ts --format cjs,esm --dts --clean",
     "release": "npm login && npm publish"
@@ -25,7 +24,6 @@
   "devDependencies": {
     "@vitest/ui": "^0.25.1",
     "astro": "^1.6.3",
-    "remark-astro-layout-url-injector": "^1.0.0",
     "tsup": "^6.4.0",
     "vitest": "^0.25.1"
   },
