--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "version": "1.1.3",
   "scripts": {
     "start": "astro dev",
-    "dev": "vitest",
+    "dev": "vitest --ui --open",
     "prod": "astro build",
     "build": "tsup lib/index.ts --format cjs,esm --dts --clean",
     "release": "npm login && npm publish"
